--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "body-parser": "^1.19.0",
     "express": "^4.17.0",
     "serverless-http": "^2.0.2"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
