--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "serverless-http": "^2.0.2"
   },
   "scripts": {
-    "start": "node index.js"
+    "start:local": "sls offline start"
+  },
+  "devDependencies": {
+    "serverless-offline": "^4.10.3"
   }
 }
