--- a/serverless.yml
+++ b/serverless.yml
@@ -17,8 +17,8 @@ provider:
 
 # The `functions` block defines what code to deploy
 functions:
-  helloWorld:
-    handler: index.handler
+  exyos:
+    handler: src/index.handler
     # The `events` block defines how to trigger the handler.helloWorld code
     events:
       - http:
