--- a/serverless.yml
+++ b/serverless.yml
@@ -8,7 +8,7 @@ plugins:
   - serverless-offline
 
 # The `service` block is the name of the service
-service: serverless-hello-world
+service: serverless-exyos
 
 # The `provider` block defines where your service will be deployed
 provider:
