--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
+    "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.0",
     "serverless-http": "^2.0.2"
