Added typscript support

--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   },
   "devDependencies": {
     "jest": "^24.8.0",
-    "serverless-offline": "^4.10.3"
+    "serverless-offline": "^4.10.3",
+    "serverless-webpack": "^5.3.0",
+    "webpack": "^4.32.2"
   }
 }
