--- a/package.json
+++ b/package.json
@@ -18,9 +18,23 @@
     "test": "jest"
   },
   "devDependencies": {
+    "@babel/core": "^7.4.5",
+    "@babel/preset-env": "^7.4.5",
+    "@babel/preset-typescript": "^7.3.3",
+    "@types/jest": "^24.0.13",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
     "serverless-offline": "^4.10.3",
     "serverless-webpack": "^5.3.0",
+    "ts-jest": "^24.0.2",
+    "typescript": "^3.4.5",
     "webpack": "^4.32.2"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest",
+      "^.+\\.tsx?$": "ts-jest"
+    }
   }
 }
