--- a/package.json
+++ b/package.json
@@ -22,12 +22,14 @@
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-typescript": "^7.3.3",
     "@types/jest": "^24.0.13",
+    "@types/node": "^12.0.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
     "jest": "^24.8.0",
     "serverless-offline": "^4.10.3",
     "serverless-webpack": "^5.3.0",
     "ts-jest": "^24.0.2",
+    "ts-loader": "^6.0.1",
     "typescript": "^3.4.5",
     "webpack": "^4.32.2"
   },
