--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "exyos",
   "version": "1.0.0",
   "description": "Express Yourself Slack Slash Command",
-  "main": "src/index.js",
+  "main": "src/index.ts",
   "repository": "git@github.com:cyclic-reference/ExYos.git",
   "author": "Alex Simons <alexsimons9999@gmail.com>",
   "license": "MIT",
