--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   },
   "scripts": {
     "start": "sls offline start",
-    "test": "jest"
+    "test": "jest",
+    "lint": "tslint src/**/*.ts"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
@@ -25,11 +26,18 @@
     "@types/node": "^12.0.2",
     "babel-core": "^7.0.0-bridge.0",
     "babel-jest": "^24.8.0",
+    "eslint": "^5.16.0",
+    "eslint-config-standard": "^12.0.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-node": "^9.1.0",
+    "eslint-plugin-promise": "^4.1.1",
+    "eslint-plugin-standard": "^4.0.0",
     "jest": "^24.8.0",
     "serverless-offline": "^4.10.3",
     "serverless-webpack": "^5.3.0",
     "ts-jest": "^24.0.2",
     "ts-loader": "^6.0.1",
+    "tslint": "^5.16.0",
     "typescript": "^3.4.5",
     "webpack": "^4.32.2"
   },
