--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "body-parser": "^1.19.0",
     "express": "^4.17.0",
+    "figlet": "^1.2.3",
     "serverless-http": "^2.0.2"
   },
   "scripts": {
