--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "jest": "^24.8.0",
+    "serverless-domain-manager": "^3.2.6",
     "serverless-offline": "^4.10.3",
     "serverless-webpack": "^5.3.0",
     "ts-jest": "^24.0.2",
