--- a/serverless.yml
+++ b/serverless.yml
@@ -7,6 +7,7 @@
 plugins:
   - serverless-offline
   - serverless-webpack
+  - serverless-domain-manager
 
 # The `service` block is the name of the service
 service: serverless-exyos
@@ -15,6 +16,13 @@ service: serverless-exyos
 provider:
   name: aws
   runtime: nodejs8.10
+
+custom:
+  customDomain:
+    domainName: exyos.acari.io
+    basePath: ''
+    stage: prd
+    createRoute53Record: true
 
 # The `functions` block defines what code to deploy
 functions:
