Working on getting sign bunny api to work

--- a/serverless.yml
+++ b/serverless.yml
@@ -26,6 +26,15 @@ custom:
 
 # The `functions` block defines what code to deploy
 functions:
+  signBunnyAPI:
+    handler: src/api/sign/index.handler
+    events:
+      - http:
+          path: /api/sign-bunny # this matches the base path
+          method: ANY
+      - http:
+          path: /api/sign-bunny/{any+} # this matches any path, the token 'any' doesn't mean anything special
+          method: ANY
   exyos:
     handler: src/index.handler
     # The `events` block defines how to trigger the handler.helloWorld code
