--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-standard": "^4.0.0",
     "jest": "^24.8.0",
+    "lodash": "^4.17.15",
     "serverless-domain-manager": "^3.2.6",
     "serverless-offline": "^4.10.3",
     "serverless-webpack": "^5.3.0",
